--- a/content/security/pt.mdx
+++ b/content/security/pt.mdx
@@ -1,441 +1,74 @@
 # Segurança
 
-_Última Atualização: 1 de Outubro de 2025_
+_Última atualização: 1 de outubro de 2025_
+
+Levamos a segurança a sério. Abaixo segue um resumo claro e direto de como protegemos os seus dados e operamos uma plataforma segura.
+
+## 1) Conformidade como base
+
+- Conformidade com RGPD e LGPD como empresa sediada em Portugal
+- Base de dados preparada para HIPAA (Neon.tech) com BAA celebrado
+- Fornecedores com certificações sólidas: Clerk, Stripe, Vercel, Neon (SOC 2 Type II), Stripe (PCI DSS L1)
+- Práticas alinhadas com ISO 27001 em desenvolvimento e operações
+- Detalhes e lista completa de subprocessadores no nosso [Acordo de Processamento de Dados](/legal/dpa)
+
+## 2) Salvaguardas técnicas
+
+- Encriptação em repouso (AES‑256‑GCM) e em trânsito (TLS 1.3, HSTS, PFS)
+- Residência de dados na UE por padrão (DB em Frankfurt; email, edge, cache, analytics e notificações na UE)
+- Rede: WAF, mitigação DDoS, rate limiting rigoroso, gateway de API seguro
+- Base de dados: pgAudit, apenas SSL, políticas ao nível de linhas, backups automatizados
+- Pagamentos: processados pelo Stripe; não armazenamos cartões; suporte a 3DS
+
+## 3) Contas e acessos
+
+- Autenticação com Clerk, SSO, opções sem palavra‑passe, sessões seguras
+- MFA (SMS, TOTP, fallback por email); obrigatório para administradores
+- Controlo de acesso baseado em funções com menor privilégio e revisões periódicas
+
+## 4) Desenvolvimento e operações seguras
+
+- Branches protegidas, revisões por pares, SAST/DAST/SCA (Snyk/Dependabot)
+- Deploys imutáveis, sem downtime, rollback, lançamentos faseados
+- Monitorização contínua, deteção de anomalias, rastreio de erros, objetivo de 99.9% de uptime
+- Registos de auditoria abrangentes; retenção conforme RGPD/LGPD/HIPAA
+
+## 5) Resposta a incidentes
+
+- Monitorização 24/7, runbooks documentados, notificações regulatórias (RGPD 72h, LGPD ANPD)
+- Revisões pós‑incidente e comunicação a utilizadores
+
+## 6) Pessoas e terceiros
+
+- Revisões trimestrais de acessos, VPN para produção, MFA, verificação de antecedentes, formação anual
+- Revisões de segurança de fornecedores, DPAs com processadores; acessos monitorizados e registados
+
+## 7) Vulnerabilidades e investigação
+
+- Pentests regulares e scanning automatizado; SLAs: Críticas 24‑48h, Altas 7 dias, Médias 30 dias, Baixas 90 dias
+- Divulgação responsável: `security@eleva.care` ou advisory no GitHub; PGP mediante pedido
+- Evite scanning automatizado sem permissão, acesso a dados alheios, divulgação prematura, engenharia social ou interrupções
+
+## 8) Privacidade de dados
+
+- Recolhemos o mínimo necessário e retemos apenas o tempo necessário
+- Pode aceder, retificar, apagar, limitar, portar ou opor‑se; contacte `privacy@eleva.care` ou `dpo@eleva.care`
+- Consulte a nossa [Política de Privacidade](/legal/privacy)
+
+## 9) Resiliência
+
+- Backups automáticos com recuperação point‑in‑time e geo‑redundância
+- RTO < 4h para sistemas críticos; RPO < 15m para DB; exercícios trimestrais de restauração
+- Alta disponibilidade com desenho multi‑região, replicação e edge caching global
+
+## 10) Fale connosco
+
+- Segurança: `security@eleva.care`
+- DPO: `dpo@eleva.care`
+- Suporte: `support@eleva.care`
 
 ---
 
-## O Nosso Compromisso com a Segurança
+**Responsável pelo Tratamento:** BÚZIOS E TARTARUGAS - LDA (Eleva.care), NIPC/NIF 515001708, Rua Gil Vicente, 2, 2775‑198 Parede, Portugal. Email `support@eleva.care`, Telefone `+351 931 897 950`.
 
-Como plataforma de tecnologia para a saúde, a Eleva.care compreende que a segurança não é apenas uma funcionalidade—é a base da confiança. Tratamos informações sensíveis de saúde de profissionais e pacientes em toda a Europa e América Latina, e levamos esta responsabilidade a sério.
-
-A nossa infraestrutura de segurança é construída sobre fundações conformes com **RGPD**, **LGPD** e **HIPAA**, implementando práticas líderes da indústria para proteger os seus dados em todas as camadas da nossa plataforma.
-
----
-
-## Certificações e Conformidade
-
-### Padrões de Conformidade Ativos
-
-✅ **RGPD (Regulamento Geral sobre a Proteção de Dados)**  
-Conformidade total como entidade baseada em Portugal que serve profissionais de saúde e pacientes da UE.
-
-✅ **LGPD (Lei Geral de Proteção de Dados Pessoais)**  
-Conformidade completa com a lei brasileira de proteção de dados (Lei nº 13.709/2018).
-
-✅ **Infraestrutura Preparada para HIPAA**  
-Infraestrutura de base de dados conforme com HIPAA através da Neon.tech com Acordo de Associado de Negócios (BAA) executado.
-
-### Certificações de Infraestrutura e Fornecedores
-
-A nossa postura de segurança é reforçada pelas certificações formais dos nossos fornecedores de infraestrutura:
-
-✅ **Infraestrutura Certificada SOC 2 Type II**
-
-- **Clerk** (Autenticação): Certificado SOC 2 Type II
-- **Stripe** (Pagamentos): SOC 2 Type II + PCI DSS Level 1
-- **Vercel** (Hospedagem): Certificado SOC 2 Type II
-- **Neon** (Base de Dados): SOC 2 Type II + conformidade HIPAA
-
-✅ **Práticas de Segurança Alinhadas com ISO 27001**  
-A nossa gestão de segurança da informação segue os princípios e melhores práticas da ISO 27001, implementados em todo o nosso ciclo de desenvolvimento, infraestrutura e procedimentos operacionais.
-
-Para informações detalhadas sobre conformidade, visite o nosso [Acordo de Processamento de Dados](/legal/dpa). Realizamos Avaliações de Impacto de Transferência (TIAs) e aplicamos medidas suplementares alinhadas com Schrems II (gestão de chaves na UE, acesso de menor privilégio, políticas de notificação e contestação de pedidos governamentais) para mitigar riscos de acesso transfronteiriço ao utilizar infraestrutura alojada na UE de fornecedores extra‑UE.
-
----
-
-## Medidas Técnicas de Segurança
-
-### Encriptação de Dados
-
-**Encriptação em Repouso:**
-
-- Encriptação **AES-256-GCM** para todos os dados relacionados com saúde
-- Encriptação ao nível da base de dados através da infraestrutura conforme HIPAA da Neon.tech
-- Backups encriptados com recuperação point-in-time
-
-**Encriptação em Trânsito:**
-
-- **TLS 1.3** para toda a transmissão de dados
-- Perfect Forward Secrecy (PFS) ativado
-- HTTP Strict Transport Security (HSTS) aplicado
-- Conexões WebSocket seguras para funcionalidades em tempo real
-
-**Gestão de Chaves:**
-
-- Políticas de rotação segura de chaves
-- Integração com Hardware Security Module (HSM) através de fornecedores cloud
-- Sem armazenamento em texto simples de chaves de encriptação
-
-### Autenticação e Controlo de Acesso
-
-**Autenticação Multi-Factor (MFA):**
-
-- Verificação baseada em SMS
-- Suporte para aplicação de autenticação (TOTP)
-- Verificação por email como alternativa
-- Obrigatório para contas administrativas
-
-**Gestão de Identidade:**
-
-- Powered by **Clerk** com autenticação de nível empresarial
-- Single Sign-On (SSO) com Google
-- Opções de autenticação sem senha
-- Gestão segura de sessões com timeout automático
-
-**Controlo de Acesso Baseado em Funções (RBAC):**
-
-- Aplicação do princípio do menor privilégio
-- Sistema de permissões granulares (Especialista, Cliente, Admin)
-- Hierarquias de funções separadas para acesso a dados da plataforma e dados clínicos
-- Revisão e auditoria regular de acessos
-
-### Segurança da Infraestrutura
-
-**Residência de Dados na UE:**
-
-- Hospedagem primária da base de dados: **Frankfurt, Alemanha** (Neon.tech)
-- Serviços de email: **Irlanda** (Resend)
-- Edge computing: **Regiões da UE** (Vercel)
-- Cache/Fila: **Regiões da UE** (Upstash)
-- Analytics: **Hospedagem na UE** (PostHog)
-- Notificações: **Endpoint API da UE** (Novu - eu.api.novu.co)
-
-**Segurança de Rede:**
-
-- Proteção DDoS através da rede edge da Vercel
-- Web Application Firewall (WAF)
-- Rate limiting em todos os endpoints da API
-- Allowlist de IPs para acesso administrativo
-- Gateway de API segura com validação de pedidos
-
-**Segurança da Base de Dados:**
-
-- PostgreSQL conforme HIPAA (plano Scale da Neon.tech)
-- Registo de auditoria melhorado via extensão **pgAudit**
-- Backups automatizados com retenção de 30 dias
-- Connection pooling com aplicação de SSL
-- Políticas de segurança ao nível de linhas da base de dados
-
-### Segurança de Pagamentos
-
-**Conformidade PCI DSS Level 1:**
-
-- Todo o processamento de pagamentos através do **Stripe**
-- Sem armazenamento de dados de cartões de crédito nos nossos servidores
-- Tokenização para métodos de pagamento
-- Suporte para autenticação 3D Secure
-- Deteção e prevenção de fraudes
-
-**Proteção de Dados Financeiros:**
-
-- Chaves de encriptação separadas para dados financeiros
-- Trilha de auditoria para todas as transações de pagamento
-- Reconciliação e monitorização automatizadas
-- Verificação segura de assinatura de webhooks
-
----
-
-## Segurança Operacional
-
-### Ciclo de Desenvolvimento Seguro
-
-**Segurança de Código:**
-
-- Proteção de branches em todos os repositórios
-- Revisões obrigatórias de código por pares
-- Scanning de segurança automatizado com **Snyk** e **Dependabot**
-- Static Application Security Testing (SAST)
-- Dynamic Application Security Testing (DAST)
-- Software Composition Analysis (SCA)
-
-**Segurança de Deployment:**
-
-- Infraestrutura imutável
-- Deployments sem tempo de inatividade
-- Capacidades de rollback automatizado
-- Testes em ambiente de staging
-- Workflow de aprovação de deployment em produção
-
-**Gestão de Dependências:**
-
-- Scanning automatizado de vulnerabilidades
-- Atualizações regulares de dependências
-- Avaliação de segurança de fornecedores
-- Monitorização de segurança da cadeia de fornecimento
-
-### Monitorização e Resposta a Incidentes
-
-**Monitorização Contínua:**
-
-- Monitorização de desempenho de aplicações em tempo real
-- Registo e análise de eventos de segurança
-- Deteção automática de anomalias
-- Monitorização de uptime com meta de SLA de 99.9%
-- Rastreamento e alertas de erros
-
-**Registo de Auditoria:**
-
-- Trilha de auditoria abrangente para todos os acessos a dados
-- Registos de processamento conformes com o Artigo 30 do RGPD
-- Registos de atividades de processamento conformes com o Artigo 37 da LGPD
-- Registos de acesso conformes com HIPAA (pgAudit)
-- Armazenamento de registos à prova de adulteração
-- Retenção mínima de registos de 12 meses
-
-**Resposta a Incidentes:**
-
-- Monitorização de incidentes de segurança 24/7
-- Plano documentado de resposta a incidentes
-- Notificação de violações conforme RGPD (requisito de 72 horas)
-- Notificação de violações conforme LGPD à ANPD
-- Análise e remediação pós-incidente
-- Protocolos de comunicação para utilizadores afetados
-
-### Segurança de Funcionários
-
-**Gestão de Acessos:**
-
-- Revisões trimestrais de acessos para todos os funcionários
-- Revogação imediata de acesso após rescisão
-- VPN obrigatória para acesso à produção
-- Autenticação multi-factor aplicada
-
-**Formação e Sensibilização:**
-
-- Formação em sensibilização para segurança para todos os funcionários
-- Formação em RGPD e LGPD para manipuladores de dados
-- Formação em HIPAA para processadores de dados de saúde
-- Cursos anuais de atualização de segurança
-- Exercícios de simulação de phishing
-
-**Verificação de Antecedentes:**
-
-- Verificação de antecedentes para todos os funcionários com acesso a dados
-- Acordos de confidencialidade (NDAs)
-- Código de conduta e políticas de segurança
-- Comunicações regulares de sensibilização para segurança
-
-### Segurança de Terceiros
-
-**Gestão de Fornecedores:**
-
-- Questionários de segurança para todos os fornecedores
-- Acordos de Processamento de Dados (DPAs) com todos os processadores
-- Avaliações regulares de segurança de fornecedores
-- Monitorização e registo de acessos de fornecedores
-- Revisões anuais de risco de fornecedores
-
-**Supervisão de Subcontratantes:**
-
-Todos os nossos processadores de dados cumprem com RGPD, LGPD e padrões de segurança aplicáveis:
-
-- **Neon Inc.** - Base de Dados (BAA HIPAA executado)
-- **Clerk Inc.** - Autenticação (SOC 2 Type II)
-- **Stripe Inc.** - Pagamentos (PCI DSS Level 1)
-- **PostHog Inc.** - Analytics (conforme RGPD)
-- **Resend Inc.** - Email (hospedagem na UE)
-- **Vercel Inc.** - Hospedagem (SOC 2 Type II)
-- **Upstash Inc.** - Cache/Fila (regiões da UE)
-- **Novu** - Notificações (endpoint UE, representante RGPD)
-
-Lista completa disponível no nosso [Acordo de Processamento de Dados](/legal/dpa).
-
----
-
-## Gestão de Vulnerabilidades
-
-### Testes Regulares de Segurança
-
-**Testes de Penetração:**
-
-- Testes de penetração anuais por terceiros
-- Avaliações de segurança internas trimestrais
-- Scanning automatizado de vulnerabilidades
-- Testes de segurança de aplicações web
-- Testes de segurança de API
-
-**Remediação de Vulnerabilidades:**
-
-- Vulnerabilidades críticas: 24-48 horas
-- Vulnerabilidades altas: 7 dias
-- Vulnerabilidades médias: 30 dias
-- Vulnerabilidades baixas: 90 dias
-- Divulgação pública após remediação
-
-### Divulgação Responsável de Vulnerabilidades
-
-Damos as boas-vindas a investigadores de segurança e hackers éticos para nos ajudar a manter os mais altos padrões de segurança.
-
-**Como Reportar uma Vulnerabilidade:**
-
-1. **Email:** [security@eleva.care](mailto:security@eleva.care)
-2. **GitHub Security Advisories:** [github.com/eleva-care/eleva-care-app/security/advisories](https://github.com/eleva-care/eleva-care-app/security/advisories)
-3. **PGP Encriptado:** Disponível mediante pedido
-
-**O Que Precisamos:**
-
-- Descrição da vulnerabilidade
-- Passos para reproduzir
-- Avaliação do impacto potencial
-- As suas informações de contacto (opcional)
-- Qualquer código proof-of-concept (se aplicável)
-
-**O Nosso Compromisso:**
-
-- Reconhecimento dentro de 48 horas
-- Atualizações regulares sobre o progresso da remediação
-- Reconhecimento nos nossos agradecimentos de segurança (a menos que prefira anonimato)
-- Sem ação legal para investigação de segurança de boa-fé
-- Estrita confidencialidade do seu relatório
-
-### Vulnerabilidades em Escopo
-
-✅ Falhas de autenticação e autorização  
-✅ Injeção SQL  
-✅ Execução de código do lado do servidor  
-✅ Escalação de privilégios  
-✅ Exposição de dados (PII, PHI, dados de pagamento)  
-✅ Sequestro de sessão  
-✅ Problemas de segurança de API  
-✅ Vulnerabilidades de encriptação  
-✅ Falhas de lógica de negócio
-
-### Vulnerabilidades Fora de Escopo
-
-❌ Clickjacking em páginas não sensíveis  
-❌ Cross-Site Request Forgery (CSRF) sem impacto  
-❌ Ataques que requerem MITM ou acesso físico  
-❌ Denial of Service (DoS/DDoS)  
-❌ Content spoofing sem modificação de HTML/CSS  
-❌ Configuração de email SPF/DKIM/DMARC  
-❌ Cabeçalhos de segurança em falta sem exploit  
-❌ Melhores práticas SSL/TLS sem vulnerabilidade real  
-❌ Rate limiting em endpoints não sensíveis  
-❌ Mensagens de erro descritivas sem exposição de dados  
-❌ Divulgação de versão de software  
-❌ Clickjacking em páginas sem ações sensíveis
-
-**Nota:** Reservamo-nos o direito de designar qualquer vulnerabilidade reportada como fora de escopo com base na avaliação de risco.
-
-### O Que Não Fazer
-
-⚠️ **Não** execute scanners automatizados sem permissão (contacte-nos para um sandbox)  
-⚠️ **Não** aceda ou modifique dados de utilizadores além do necessário para demonstrar a vulnerabilidade  
-⚠️ **Não** divulgue publicamente a vulnerabilidade antes de termos tido tempo para corrigi-la  
-⚠️ **Não** realize engenharia social, phishing ou ataques físicos  
-⚠️ **Não** se envolva em qualquer atividade que possa interromper os nossos serviços
-
----
-
-## Privacidade e Proteção de Dados
-
-### Minimização de Dados
-
-Recolhemos apenas os dados necessários para fornecer os nossos serviços:
-
-- **Dados de Identidade:** Nome, email, telefone (para autenticação)
-- **Dados de Perfil:** Credenciais profissionais, especialidades (para profissionais)
-- **Dados Clínicos:** Notas de consultas, gravações de sessões (encriptadas, controladas pelo profissional)
-- **Dados de Pagamento:** Métodos de pagamento tokenizados (geridos pelo Stripe)
-- **Dados de Utilização:** Analytics da plataforma (anonimizados sempre que possível)
-
-### Retenção de Dados
-
-- **Contas ativas:** Dados retidos enquanto a conta estiver ativa
-- **Contas inativas:** Notificação de inatividade de 12 meses, depois eliminação em 24 meses
-- **Dados clínicos:** Retidos conforme regulamentos de saúde (varia por jurisdição)
-- **Registos de auditoria:** Retenção mínima de 12 meses para investigações de segurança
-- **Backups:** Retenção de 30 dias com armazenamento encriptado
-
-### Direitos dos Titulares de Dados
-
-Apoiamos totalmente os direitos do RGPD e LGPD:
-
-- **Direito de Acesso:** Exporte os seus dados em formato portátil
-- **Direito de Retificação:** Atualize ou corrija as suas informações
-- **Direito ao Apagamento:** Elimine a sua conta e dados
-- **Direito de Limitação:** Limite o processamento dos seus dados
-- **Direito à Portabilidade:** Transfira dados para outro serviço
-- **Direito de Oposição:** Opte por não participar em atividades de processamento
-- **Direito à Decisão Automatizada:** Explicação de decisões algorítmicas
-
-**Exercer os Seus Direitos:**  
-Email: [privacy@eleva.care](mailto:privacy@eleva.care) ou [dpo@eleva.care](mailto:dpo@eleva.care)
-
-Para mais detalhes, consulte a nossa [Política de Privacidade](/legal/privacy).
-
----
-
-## Continuidade de Negócio e Recuperação de Desastres
-
-### Backup e Recuperação
-
-- **Backups automatizados:** A cada 6 horas com recuperação point-in-time
-- **Armazenamento geo-redundante:** Replicação entre regiões
-- **Recovery Time Objective (RTO):** < 4 horas para sistemas críticos
-- **Recovery Point Objective (RPO):** < 15 minutos para base de dados
-- **Testes de backup:** Exercícios de restauração trimestrais
-
-### Alta Disponibilidade
-
-- **Deployment multi-região:** Capacidade de failover automático
-- **Load balancing:** Tráfego distribuído entre zonas de disponibilidade
-- **Replicação de base de dados:** Configuração primária-réplica com failover automático
-- **CDN:** Cache global edge para ativos estáticos
-- **SLA de uptime:** Meta de disponibilidade de 99.9%
-
----
-
-## Automação de Conformidade
-
-Utilizamos plataformas de automação de segurança e conformidade para garantir conformidade contínua:
-
-**Monitorização Contínua:**
-
-- Avaliações automatizadas de controlos de segurança
-- Rastreamento em tempo real da postura de conformidade
-- Integração com sistemas e ferramentas existentes
-- Dashboards abrangentes de segurança
-- Alertas imediatos sobre desvios de conformidade
-
-**Remediação Proativa:**
-
-- Deteção automatizada de problemas de conformidade
-- Alertas imediatos para a equipa de segurança
-- Rastreamento e verificação de remediação
-- Ciclos de melhoria contínua
-- Documentação pronta para auditoria
-
----
-
-## Contacto e Questões
-
-### Equipa de Segurança
-
-Para questões relacionadas com segurança:
-
-- **Problemas de Segurança:** [security@eleva.care](mailto:security@eleva.care)
-- **Encarregado de Proteção de Dados:** [dpo@eleva.care](mailto:dpo@eleva.care)
-- **Suporte Geral:** [support@eleva.care](mailto:support@eleva.care)
-
-### Documentação
-
-- [Política de Privacidade](/legal/privacy)
-- [Acordo de Processamento de Dados](/legal/dpa)
-- [Termos de Serviço](/legal/terms)
-- [Política de Cookies](/legal/cookie)
-
----
-
-**Responsável pelo Tratamento:**
-
-**BÚZIOS E TARTARUGAS - LDA**  
-Operando comercialmente como **Eleva.care**  
-NIPC/NIF: 515001708  
-Rua Gil Vicente, 2, 2775-198 Parede, Portugal  
-Email: [support@eleva.care](mailto:support@eleva.care)  
-Telefone: [+351 931 897 950](tel:+351931897950)
-
----
-
-_Melhoramos continuamente as nossas práticas de segurança. Esta página é atualizada regularmente para refletir as nossas medidas de segurança e padrões de conformidade mais recentes._
+Melhoramos continuamente o nosso programa de segurança e atualizamos esta página conforme evolui.
